fixed some errors

--- a/Boutique-FE/src/layout/header/header.component.html
+++ b/Boutique-FE/src/layout/header/header.component.html
@@ -24,6 +24,7 @@
       <!-- Menu -->
       <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="viewProfile()">Profile</button>
+        <button mat-menu-item (click)="login()">Login</button>
         <button mat-menu-item (click)="logout()">Logout</button>
       </mat-menu>
     </div>
