--- a/Boutique-FE/src/pages/cart/cart.component.html
+++ b/Boutique-FE/src/pages/cart/cart.component.html
@@ -52,7 +52,7 @@
           </div>
           <h2 class="empty-cart-message">Your Cart is Empty!</h2>
           <p class="empty-cart-submessage">It seems like you haven't added anything to your cart yet. Let's go shopping!</p>
-          <a  class="shop-now-btn" (click)="goToShop()">Go Shopping</a>
+          <a  class="shop-now-link" (click)="goToShop()">Go Shopping</a>
         </div>
       </div>
     </ng-template>
