--- a/Boutique-FE/src/app/bridalCostumesFolder/view-bridal-costumes/view-bridal-costumes.component.html
+++ b/Boutique-FE/src/app/bridalCostumesFolder/view-bridal-costumes/view-bridal-costumes.component.html
@@ -1,5 +1,17 @@
+<div class="route-display" style="margin-bottom: 10px;">
+  <p>
+     <a [routerLink]="'/home'" class="home-link" style="cursor: pointer;">
+       Home/ 
+    </a>
+    <a [routerLink]="'/bridalcostumes'" class="home-link" style="cursor: pointer;">
+      Bridalcostumes
+   </a>
+  </p>
+  
+  
+</div>
 <div class="boutique-container" >
-   
+
   <div class="image-gallery">
     <!-- Large Display Image -->
     <div class="featured-image">
