--- a/Boutique-FE/src/app/brideSquadeFolder/bridesquad/bridesquad.component.html
+++ b/Boutique-FE/src/app/brideSquadeFolder/bridesquad/bridesquad.component.html
@@ -1,4 +1,14 @@
+<div class="route-display" style="margin-bottom: 10px;">
+  <p>
+     <a [routerLink]="'/home'" class="home-link" style="cursor: pointer;">
+       Home/ 
+    </a>
+
+  
+  
+</div>
 <div class="main-container">
+
   <div class="newarrivals">
     <div
       class="arrivalcard"
