--- a/Boutique-FE/src/app/cordset/viewcoords/viewcoords.component.css
+++ b/Boutique-FE/src/app/cordset/viewcoords/viewcoords.component.css
@@ -200,4 +200,11 @@ body {
       gap: 20px;
     }
   }
+  .current-route-link {
+    text-decoration: none; /* Underline for current route link */
+    margin-right: 10px; /* Adds space between current route and home link */
+  }
   
+  .home-link {
+    text-decoration: none; /* Underline for home link */
+  }
