--- a/Boutique-FE/src/app/halfsarees/viewhalfsaree/viewhalfsaree.component.html
+++ b/Boutique-FE/src/app/halfsarees/viewhalfsaree/viewhalfsaree.component.html
@@ -1,4 +1,17 @@
+<div class="route-display" style="margin-bottom: 10px;">
+  <p>
+     <a [routerLink]="'/home'" class="home-link" style="cursor: pointer;">
+       Home/ 
+    </a>
+    <a [routerLink]="'/halfsaree'" class="home-link" style="cursor: pointer;">
+      HalfSaree
+   </a>
+  </p>
+  
+  
+</div>
 <div class="boutique-container" >
+
     <!-- Left Side: Image Gallery -->
     <div class="image-gallery">
       <!-- Large Display Image -->
