--- a/Boutique-FE/src/app/leggings/legging/legging.component.css
+++ b/Boutique-FE/src/app/leggings/legging/legging.component.css
@@ -292,3 +292,12 @@ right: 10px;
 }
 
 }
+
+.current-route-link {
+  text-decoration: none; /* Underline for current route link */
+  margin-right: 10px; /* Adds space between current route and home link */
+}
+
+.home-link {
+  text-decoration: none; /* Underline for home link */
+}
