--- a/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.css
+++ b/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.css
@@ -398,3 +398,11 @@ td {
   cursor: pointer;
   text-decoration: underline;
 }
+.current-route-link {
+  text-decoration: none; /* Underline for current route link */
+  margin-right: 10px; /* Adds space between current route and home link */
+}
+
+.home-link {
+  text-decoration: none; /* Underline for home link */
+}
