--- a/Boutique-FE/src/app/officewears/officewear/officewear.component.html
+++ b/Boutique-FE/src/app/officewears/officewear/officewear.component.html
@@ -1,3 +1,12 @@
+<div class="route-display" style="margin-bottom: 10px;">
+  <p>
+     <a [routerLink]="'/home'" class="home-link" style="cursor: pointer;">
+       Home/ 
+    </a>
+  </p>
+  
+  
+</div>
 <div class="main-container">
     <div class="newarrivals">
       <div
