--- a/Boutique-FE/src/app/officewears/viewofficewear/viewofficewear.component.css
+++ b/Boutique-FE/src/app/officewears/viewofficewear/viewofficewear.component.css
@@ -1,4 +1,12 @@
 /* Global Styles */
+.current-route-link {
+  text-decoration: none; /* Underline for current route link */
+  margin-right: 10px; /* Adds space between current route and home link */
+}
+
+.home-link {
+  text-decoration: none; /* Underline for home link */
+}
 body {
     font-family: 'Lora', serif; /* Elegant serif font for headings */
     font-size: 16px;
