--- a/Boutique-FE/src/app/officewears/viewofficewear/viewofficewear.component.html
+++ b/Boutique-FE/src/app/officewears/viewofficewear/viewofficewear.component.html
@@ -1,4 +1,15 @@
-
+<div class="route-display" style="margin-bottom: 10px;">
+  <p>
+     <a [routerLink]="'/home'" class="home-link" style="cursor: pointer;">
+       Home/ 
+    </a>
+    <a [routerLink]="'/officewear'" class="home-link" style="cursor: pointer;">
+      OfficeWear 
+   </a>
+  </p>
+  
+  
+</div>
 <div class="boutique-container" >
     <!-- Left Side: Image Gallery -->
     <div class="image-gallery">
