--- a/Boutique-FE/src/pages/sareefolder/saree/saree.component.html
+++ b/Boutique-FE/src/pages/sareefolder/saree/saree.component.html
@@ -1,4 +1,15 @@
+<div class="route-display" style="margin-bottom: 10px;">
+  <p>
+     <a [routerLink]="'/home'" class="home-link" style="cursor: pointer;">
+       Home/ 
+    </a>
+
+  </p>
+  
+  
+</div>
 <div class="main-container">
+ 
   <div class="newarrivals">
     <div
       class="arrivalcard"
