--- a/Boutique-FE/src/plussize/plussizee/plussizee.component.css
+++ b/Boutique-FE/src/plussize/plussizee/plussizee.component.css
@@ -1,3 +1,11 @@
+.current-route-link {
+  text-decoration: none; /* Underline for current route link */
+  margin-right: 10px; /* Adds space between current route and home link */
+}
+
+.home-link {
+  text-decoration: none; /* Underline for home link */
+}
 .main-container {
   display: flex;
   flex-wrap: wrap;
