--- a/Boutique-FE/src/pages/homepage/homepage.component.css
+++ b/Boutique-FE/src/pages/homepage/homepage.component.css
@@ -131,15 +131,53 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
 .main-image {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  transition: opacity 1s ease-in-out;
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+/* Indicator Bar Container */
+.indicator-container {
+  position: absolute;
+  bottom: 10px; /* Adjust the position slightly above the bottom */
+  left: 50%;
+  transform: translateX(-50%); /* Center the indicators */
+  display: flex;
+  gap: 8px;
+}
+
+/* Indicator Bar Styling */
+.indicator-bar {
+  width: 30px;
+  height: 5px;
+  background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent for inactive */
+  border-radius: 5px;
+  transition: background-color 0.5s ease-in-out;
+}
+
+/* Active Indicator */
+.indicator-bar.active {
+  background-color: white; /* Fully white for active image */
+}
+/* .main-image {
   width: 100%;
   height: 100%;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   transition: background-image 0.5s ease;
-}
+} */
+
 
 button {
   position: absolute;
