--- a/Boutique-FE/src/pages/homepage/homepage.component.css
+++ b/Boutique-FE/src/pages/homepage/homepage.component.css
@@ -124,29 +124,28 @@
   height: 500px;
   margin: auto;
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border: 2px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-.main-image {
+
+/* Wrapper for sliding effect */
+.slider-wrapper {
+  display: flex;
   width: 100%;
+  height: 100%;
+  transition: transform 1s ease-in-out;
+}
+
+/* Each image div should take full width */
+.main-image {
+  min-width: 100%;
   height: 100%;
   background-size: cover;
   background-position: center;
-  transition: opacity 1s ease-in-out;
-  opacity: 0;
-  animation: fadeIn 1s forwards;
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
 
-/* Indicator Bar Container */
 .indicator-container {
   position: absolute;
   bottom: 10px; /* Adjust the position slightly above the bottom */
