--- a/Boutique-FE/src/pages/homepage/homepage.component.css
+++ b/Boutique-FE/src/pages/homepage/homepage.component.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+   
 }
 .category-container1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
 }
 .category-items {
   display: flex;
@@ -17,7 +17,8 @@
   width: 100%;
   flex-wrap: wrap;
   gap: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 /* Add scrolling for smaller screens */
@@ -111,8 +112,9 @@
 }
 
 .category-name {
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 12px;
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  /* font-weight: bold; */
   text-align: center;
 }
 
@@ -136,7 +138,7 @@
 .image-container {
   position: relative;
   width: 100%; /* Adjust to your desired size */
-  height: 500px;
+  height: 600px;
   margin: auto;
   overflow: hidden;
   border: 2px solid #ddd;
@@ -158,6 +160,7 @@
   height: 100%;
   background-size: cover;
   background-position: center;
+ background-repeat: no-repeat;
 }
 
 
