--- a/Boutique-FE/src/layout/footer/footer.component.html
+++ b/Boutique-FE/src/layout/footer/footer.component.html
@@ -1,16 +1,16 @@
-<footer class="footer">
-  <!-- Customer Service Row -->
+<!-- <footer class="footer">
+  
   <div class="footer-customer-service">
     <ul class="customer-service-links">
       <li  [routerLink]="'/terms'">Terms and Conditions</li>
       <li  [routerLink]="'/policy'">Privacy Policy</li>
       <li  [routerLink]="'/return'">Return and Exchange Policy</li>
       <li  [routerLink]="'/aboutus'">About Us</li>
-      <!-- <li><a href="/contact-us">Contact Us</a></li> -->
+     
     </ul>
   </div>
 
-  <!-- Social Media Icons Row -->
+
   <div class="footer-social-media">
     <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
       <i class="fab fa-instagram"></i>
@@ -22,4 +22,4 @@
       <i class="fab fa-facebook"></i>
     </a>
   </div>
-</footer>
+</footer> -->
