--- a/Boutique-FE/src/app/officewears/viewofficewear/viewofficewear.component.css
+++ b/Boutique-FE/src/app/officewears/viewofficewear/viewofficewear.component.css
@@ -107,7 +107,9 @@ body {
     }
 }
   
-
+:host {
+  line-height: normal !important;
+ }
   
   /* Right Side: Product Details */
   .product-details {
