--- a/Boutique-FE/src/plussize/viewplussizee/viewplussizee.component.css
+++ b/Boutique-FE/src/plussize/viewplussizee/viewplussizee.component.css
@@ -6,6 +6,9 @@
 .home-link {
   text-decoration: none; /* Underline for home link */
 }
+:host {
+  line-height: normal !important;
+ }
 /* Global Styles */
 body {
     font-family: 'Lora', serif; /* Elegant serif font for headings */
