--- a/Boutique-FE/src/app/999/viewninenineninecostumes/viewninenineninecostumes.component.css
+++ b/Boutique-FE/src/app/999/viewninenineninecostumes/viewninenineninecostumes.component.css
@@ -101,7 +101,9 @@ body {
   border-radius: 5px;
   transition: background-color 0.5s ease-in-out;
 }
-
+:host {
+  line-height: normal !important;
+ }
 /* Mobile-specific styling */
 @media (max-width: 480px) {
   .image-gallery {
