--- a/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.css
+++ b/Boutique-FE/src/app/momAndDaughterFolder/view-momand-daughter/view-momand-daughter.component.css
@@ -1,4 +1,6 @@
-/* Global Styles */
+:host {
+ line-height: normal !important;
+}
 body {
     font-family: 'Lora', serif; /* Elegant serif font for headings */
     font-size: 16px;
