--- a/Boutique-FE/src/app/momAndDaughterFolder/momand-daughter/momand-daughter.component.css
+++ b/Boutique-FE/src/app/momAndDaughterFolder/momand-daughter/momand-daughter.component.css
@@ -31,7 +31,7 @@
       height: 260px; 
       overflow: hidden;
       transition: transform 0.1s ease-in-out;
-      background-size: contain; 
+      background-size: cover; 
      background-position: center; 
      background-repeat: no-repeat; 
     }
@@ -39,7 +39,7 @@
     .card-image img {
       width: 100%; 
       height: 100%; 
-      object-fit: cover; 
+      object-fit: contain; 
       transition: transform 0.1s ease-in-out;
     }
     
