--- a/Boutique-FE/src/app/bridalCostumesFolder/bridalcostumes/bridalcostumes.component.html
+++ b/Boutique-FE/src/app/bridalCostumesFolder/bridalcostumes/bridalcostumes.component.html
@@ -17,32 +17,20 @@
       (click)="selectCard(i)"
     >
       <!-- Card Image -->
-      <div class="card-image">
-        <div *ngIf="product.images?.length > 1" class="carousel">
+      <div class="card-image" (mouseenter)="onHover(i, product.imageUrl)" (mouseleave)="onLeave(i)">
+        <div *ngIf="product.imageUrl?.length > 1" class="carousel">
+          <!-- Image Display -->
           <img
-            [src]="url + product.images[currentIndexes[i]]"
+            [src]="url + product.imageUrl[currentIndexes[i]]"
             class="product-image"
             alt="Product image"
           />
-          <!-- Navigation buttons -->
-          <button
-            class="prev-btn"
-            (click)="previousImage(i, product.images); $event.stopPropagation()"
-          >
-            &#10094;
-          </button>
-          <button
-            class="next-btn"
-            (click)="nextImage(i, product.images); $event.stopPropagation()"
-          >
-            &#10095;
-          </button>
         </div>
-
-        <!-- Single image display -->
-        <div *ngIf="!product.images || product.images.length === 1">
+      
+        <!-- Single Image Display -->
+        <div *ngIf="!product.imageUrl || product.imageUrl.length === 1">
           <img
-            [src]="url + (product.images?.[0] || product.imageUrl)"
+            [src]="url + (product.imageUrl?.[0] || product.imageUrl)"
             class="product-image"
             alt="Product image"
           />
