--- a/Boutique-FE/src/app/familyComboFolder/family-combo/family-combo.component.html
+++ b/Boutique-FE/src/app/familyComboFolder/family-combo/family-combo.component.html
@@ -16,38 +16,25 @@
         *ngFor="let product of filteredData; let i = index"
         (click)="selectCard(i)"
       >
-        <!-- Card Image -->
-        <div class="card-image">
-          <div *ngIf="product.images?.length > 1" class="carousel">
-            <img
-              [src]="url + product.images[currentIndexes[i]]"
-              class="product-image"
-              alt="Product image"
-            />
-            <!-- Navigation buttons -->
-            <button
-              class="prev-btn"
-              (click)="previousImage(i, product.images); $event.stopPropagation()"
-            >
-              &#10094;
-            </button>
-            <button
-              class="next-btn"
-              (click)="nextImage(i, product.images); $event.stopPropagation()"
-            >
-              &#10095;
-            </button>
-          </div>
-  
-          <!-- Single image display -->
-          <div *ngIf="!product.images || product.images.length === 1">
-            <img
-              [src]="url + (product.images?.[0] || product.imageUrl)"
-              class="product-image"
-              alt="Product image"
-            />
-          </div>
+      <div class="card-image" (mouseenter)="onHover(i, product.imageUrl)" (mouseleave)="onLeave(i)">
+        <div *ngIf="product.imageUrl?.length > 1" class="carousel">
+          <!-- Image Display -->
+          <img
+            [src]="url + product.imageUrl[currentIndexes[i]]"
+            class="product-image"
+            alt="Product image"
+          />
         </div>
+      
+        <!-- Single Image Display -->
+        <div *ngIf="!product.imageUrl || product.imageUrl.length === 1">
+          <img
+            [src]="url + (product.imageUrl?.[0] || product.imageUrl)"
+            class="product-image"
+            alt="Product image"
+          />
+        </div>
+      </div>
   
         <!-- Card Details -->
         <div class="card-details">
