--- a/Boutique-FE/src/pages/sareefolder/saree/saree.component.html
+++ b/Boutique-FE/src/pages/sareefolder/saree/saree.component.html
@@ -16,37 +16,25 @@
       *ngFor="let product of filteredData; let i = index"
       (click)="selectCard(i)"
     >
-      <div class="card-image">
-        <!-- Image Carousel -->
-        <div *ngIf="product.imageUrl?.length > 1" class="carousel">
-          <img
-            [src]="url + product.imageUrl[currentIndexes[i]]"
-            class="product-image"
-            alt="Product image"
-          />
-          <button
-            class="prev-btn"
-            (click)="previousImage(i, product.imageUrl); $event.stopPropagation()"
-          >
-            &#10094;
-          </button>
-          <button
-            class="next-btn"
-            (click)="nextImage(i, product.imageUrl); $event.stopPropagation()"
-          >
-            &#10095;
-          </button>
-        </div>
-
-        <!-- Single Image -->
-        <div *ngIf="!product.images || product.images.length === 1">
-          <img
-            [src]="url + (product.images?.[0] || '/path/to/default/image.jpg')"
-            class="product-image"
-            alt="Product image"
-          />
-        </div>
+    <div class="card-image" (mouseenter)="onHover(i, product.imageUrl)" (mouseleave)="onLeave(i)">
+      <div *ngIf="product.imageUrl?.length > 1" class="carousel">
+        <!-- Image Display -->
+        <img
+          [src]="url + product.imageUrl[currentIndexes[i]]"
+          class="product-image"
+          alt="Product image"
+        />
       </div>
+    
+      <!-- Single Image Display -->
+      <div *ngIf="!product.imageUrl || product.imageUrl.length === 1">
+        <img
+          [src]="url + (product.imageUrl?.[0] || product.imageUrl)"
+          class="product-image"
+          alt="Product image"
+        />
+      </div>
+    </div>
 
       <!-- Card Details -->
       <div class="card-details">
