--- a/Boutique-FE/src/plussize/plussizee/plussizee.component.css
+++ b/Boutique-FE/src/plussize/plussizee/plussizee.component.css
@@ -20,7 +20,7 @@
   }
   
   .arrivalcard {
-    width: 260px;
+    width: 200px !important;
     height: 360px;
     margin: 10px;
     display: inline-block;
@@ -39,7 +39,7 @@
     height: 260px; 
     overflow: hidden;
     transition: transform 0.1s ease-in-out;
-    background-size: contain; 
+    background-size: cover; 
    background-position: center; 
    background-repeat: no-repeat; 
   }
@@ -47,7 +47,7 @@
   .card-image img {
     width: 100%; 
     height: 100%; 
-    object-fit: cover; 
+    object-fit: contain; 
     transition: transform 0.1s ease-in-out;
   }
   
@@ -57,6 +57,7 @@
     cursor: pointer; 
    
   }
+  
   
   .card-details {
     /* padding: 10px; */
