created an arrow icon

--- a/Boutique-FE/src/pages/homepage/homepage.component.html
+++ b/Boutique-FE/src/pages/homepage/homepage.component.html
@@ -1,4 +1,12 @@
+
+<div class="con">
+  <button  class="btn2" (click)="onbtn()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+</div>
 <div class="category-container"  *ngIf="showCategoryContent" [ngClass]="{ 'show-category': showCategoryContent }">
+ 
+  
     <div class="category-items">
         <div class="category-item">
             <div class="category-image MomDaughterCombo" (click)="momanddaughter()"></div>
