--- a/Boutique-FE/src/pages/homepage/homepage.component.css
+++ b/Boutique-FE/src/pages/homepage/homepage.component.css
@@ -1,3 +1,25 @@
+
+.con{
+  width: 100%;
+  height: 10px;
+}
+.btn2{
+  justify-content: flex-start;
+  margin: 5px;
+  position: relative;
+  background-color: transparent;
+}
+.btn2 {
+  background: transparent !important; /* Remove background */
+  border: none; /* Remove border if any */
+  box-shadow: none; /* Remove box shadow */
+}
+
+.btn2:hover {
+  color: #333;
+  background: transparent !important; /* Ensure no background on hover */
+}
+
 .category-container {
     display: flex;
     flex-direction: column;
